--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,8 @@ footer a{
 
     .contacto{
         width: 100%;
+        padding-top: 10%;
+        padding-bottom: 10%;
     }
 
     .contacto .row{
